# xrt

./: .gitattributes  .gitignore  .readthedocs.yaml  LICENSE.txt  PKG-INFO  README.md  README.rst  README.txt  pixi.toml  pyproject.toml  setup.py
doc/: .readthedocs.yaml  Makefile  calculator.rst  conf.py  gallery1.rst  gallery2.rst  gallery3.rst  gallery4.rst  glow_notes.rst  gpu.rst  history.rst  index.rst  instructions.rst  license.rst  make.bat  make_bat_rename  plans.rst  plots.rst  qook.rst  qook_tutorial.rst  raycing.rst  rtd_requirements.txt  runs.rst  shadow.rst  speed.rst  test_materials.py  test_materials.rst  test_oes.py  test_oes.rst  test_undulator.rst  test_waves.py  test_waves.rst  tests.rst  using.rst
doc/_images/: 1D-DegOfPol_Laue.swf  BentLaueDCM09keV.swf  BentLaueDCM_rc09keV.swf  BentLaueDCM_rc16keV.swf  BentLaueDCM_rc25keV.swf  BentLaueDCM_rc36keV.swf  BentLaueSCM09keV.swf  BentLaueSCM16keV.swf  BentLaueSCM25keV.swf  BentLaueSCM36keV.swf  CRL-Al.swf  CRL-Be.swf  FlexPES-energyScan.swf  FlexPES-energyScanAtSlit.swf  FlexPES-slitScan.swf  IpPol.swf  QWP-BT-CircPolRate.swf  QWP-BT-E.swf  QWP-BT-PhaseShift.swf  QWP-BT-PolAxesRatio.swf  QWP-LT-CircPolRate.swf  QWP-LT-E.swf  QWP-LT-PhaseShift.swf  QWP-LT-PolAxesRatio.swf  QWP-LT-conv-CircPolRate.swf  QWP-LT-conv-bent-CircPolRate.swf  Si111.swf  Si311.swf  YoungRays.swf  YoungWave.swf  cxi-S1DhFlat.swf  cxi-S1DhFront.swf  cxi-coh2-0emit.swf  cxi-coh2-non0e.swf  cxi-hS.swf  cxi-rS.swf  cxi-wS.swf  cxi_S1Dh.swf  cxi_S1Dv.swf  cxi_S2D.swf  (+35 more)
doc/_static/: animation.js  thumbnail.css
doc/_templates/: layout.html
doc/anim_encoder/: anim_encoder.py
doc/exts/: animation.py  it_works_index.html  verify.py
examples/withDummy/: __init__.py  logo_xrQt.py  logo_xrt.py  logo_xrwt.py  xrt_demo.py
f1f2/: _make_pickled_fs.py
f1f2/raw/: Ac.ch  Ag.ch  Al.ch  Ar.ch  As.ch  At.ch  Au.ch  B.ch  Ba.ch  Be.ch  Bi.ch  Br.ch  C.ch  Ca.ch  (+170 more)
tests/: convexHull.py  invertColors.py  kde.py  kde_mlab.py  run_raycing_examples.py  testDiffract.py
xrt/: __init__.py  kde.py  multipro.py  plotter.py  runner.py  version.py  xrtglow.py
(+692 files in other folders)
